# YouTube_query

api/: .env  pyproject.toml
api/search_youtube/: embeddings.py  execute_sql.py  main.py  storage.py  transcription.py  utils.py  video.py
db/: .env  drizzle.config.ts  package.json  pnpm-lock.yaml
db/migrations/: 0000_far_groot.sql  0001_cool_morlocks.sql  0002_chunky_mother_askani.sql
db/migrations/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  _journal.json
db/schema/: index.ts  sentenceEmbeddings.model.ts  sentences.model.ts  types.ts  videos.model.ts
search_youtube/: main.py
